@@ -1,0 +1,22 @@
+/*
+ * Copyright (c) 2009 Timothy Bourke
+ * All rights reserved.
+ *
+ * This program is free software; you can redistribute it and/or modify it
+ * under the terms of the "BSD License" which is distributed with the
+ * software in the file ../../LICENSE.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the BSD
+ * License for more details.
+ */
+
+package mnemogogo.mobile.hexcsv;
+
+interface CardDataSet {
+    void setCardData(int serial, String question, String answer,
+		     boolean overlay);
+    boolean cardDataNeeded(int serial);
+}
+
